# limo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml
example-scripts/: crud.limo  hello.limo  tree.limo
src/: client_id.rs  context.rs  interpret.rs  line.rs  main.rs  path.rs
src/cmd/: cat.rs  cd.rs  cp.rs  display.rs  echo.rs  ln.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  pwd.rs  rm.rs  rmdir.rs  touch.rs  tree.rs  uln.rs
src/line/: interpret.rs  lex.rs  mod.rs  parse.rs
