[package]
name = "limo"
description = "Interactive shell for Project Lighthouse model servers"
version = "2.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ProjectLighthouseCAU/limo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1.0"
dotenvy = "0.15"
lighthouse-client = "3.0.1"
once_cell = "1.19.0"
ref-cast = "1.0"
regex = "1.10.3"
rustyline = "14.0"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "time", "fs"] }
url = "2.5.0"
