[package]
name = "limo"
description = "Interactive shell for Project Lighthouse model servers"
version = "3.1.1"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/ProjectLighthouseCAU/limo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-recursion = "1.1.0"
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1.0"
crossterm = { version = "0.27.0", features = ["event-stream"] }
dotenvy = "0.15"
futures = "0.3.30"
lighthouse-client = "4.0.0"
multipeek = "0.1.2"
once_cell = "1.20.3"
ratatui = "0.27.0"
ref-cast = "1.0"
rustyline = "14.0"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "time", "fs"] }
url = "2.5.0"
uuid = { version = "1.15.1", features = ["v4"] }
